Add first setup for the deferred render

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -100,7 +100,7 @@ add_executable( ${TARGET_NAME}
         TextureManager.h
         TextureObject.cpp
         TextureObject.h
-        GUI/EngineInfoContent.cpp GUI/EngineInfoContent.h TestScene.cpp)
+        GUI/EngineInfoContent.cpp GUI/EngineInfoContent.h TestScene.cpp FBO.h FBO.cpp)
 
 # Set target properties
 target_include_directories( ${TARGET_NAME} PUBLIC ${OPENGL_INCLUDE_DIR} )
